# Parallel-ARM

./: .gitignore  Apriori.c  Apriori.h  CMakeLists.txt  Makefile  dynamic_hash_table.c  dynamic_hash_table.h  find-rules.c  groceries.txt  io-processing.c  io-processing.h  itemset_hash_table.c  itemset_hash_table.h  makefile  map_items.c  map_lookup.c  rules-aux.c  rules-aux.h
